--- a/note.html
+++ b/note.html
@@ -109,9 +109,10 @@
           hope u still have the flowers that I bought you, they were rlly
           pretty. I also hope u like the gift I got you, I hope it comes in time
           D; I bought u a bracelet bc i rmbr u said u wanted one to match ur
-          current one. I'm so excited that we've almost spent 4 years tgt, and I
-          can't wait to see whats next for us. Ik it will be good :D Happy
-          valentines day. ILY!! 💖
+          current one. I also got u the shampoo u rlly wanted, I hope that
+          wasn't super obvious from the amazon package lol. I'm so excited that
+          we've almost spent 4 years tgt, and I can't wait to see whats next for
+          us. Ik it will be good :D Happy valentines day. ILY!! 💖
         </p>
         <p>Victor</p>
       </div>
